# Ejercicio-3-Sistema-Solar

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  resources.cfg
assets/: MarsPlanet.mtl
include/: planet.h  player.h
src/: CMakeLists.txt  planet.cpp  player.cpp
